@@ -1,3 +1,7 @@
+2011-11-29  Per Bothner  <per@bothner.com>
+
+	* misc-test.scm: New test-case.
+
 2011-11-03  Per Bothner  <per@bothner.com>
 
 	* classes1.scm (SimpleA:withVarArg): New varargs method.
